// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography matches DOM Snapshot for Heading 1`] = `
<Text
  className="StyledNativeComponent sc-aXZVg fBikhC"
  color="#000"
  fontFamily="Roboto"
  fontSize="M"
  fontWeight="NORMAL"
>
  Test Heading
</Text>
`;

exports[`Typography matches DOM Snapshot for SubHeading 1`] = `
<Text
  className="StyledNativeComponent sc-gEvEer gyLyvE"
  color="#000"
  fontFamily="Roboto"
  fontSize="M"
  fontWeight="NORMAL"
>
  Test SubHeading
</Text>
`;
